Add wash_server get handler
