# cmd/wash_admin/internal/entity/WashServer.go
@@ -1,0 +1,10 @@
+package entity
+
+import uuid "github.com/satori/go.uuid"
+
+type WashServer struct {
+	ID uuid.UUID
+	Name string
+	Description string
+	APIKey string
+}
