# cmd/wash_admin/openapi/swagger.yaml
@@ -51,6 +51,10 @@ paths:
           description: OK
           schema:
             $ref: "#/definitions/WashServer"
+        400:
+          description: Bad request
+          schema:
+            $ref: "#/definitions/error"
         404:
           description: WashServer not exists
           schema:
@@ -151,6 +155,8 @@ definitions:
       name:
         type: string
       description:
+        type: string
+      api_key:
         type: string
 
   WashServerGet:
